--- a/res/layout/fragment_page_home_list.xml
+++ b/res/layout/fragment_page_home_list.xml
@@ -4,34 +4,34 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-          <RelativeLayout
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@android:color/white"
+        android:gravity="right"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/title_home"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="right"
-            android:orientation="horizontal"
-            android:background="@android:color/white" >
+            android:layout_height="44dp"
+            android:layout_margin="3dp"
+            android:layout_toLeftOf="@+id/btn_search_home"
+            android:gravity="center_vertical"
+            android:text="掌上校园"
+            android:textColor="@android:color/holo_blue_light"
+            android:textSize="33sp"
+            android:textStyle="italic" />
 
-            <TextView
-                android:id="@+id/title_home"
-                android:layout_width="match_parent"
-                android:layout_height="44dp"
-                android:layout_margin="3dp"
-                android:layout_toLeftOf="@+id/btn_search_home"
-                android:text="掌上校园"
-                android:textColor="@android:color/holo_blue_light"
-                android:gravity="center_vertical"
-                android:textStyle="italic"
-                android:textSize="33sp" />
-
-            <Button
-                android:id="@+id/btn_search_home"
-                android:layout_width="33dp"
-                android:layout_height="33dp"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/image_search" />
-        </RelativeLayout>
+        <Button
+            android:id="@+id/btn_search_home"
+            android:layout_width="33dp"
+            android:layout_height="33dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/image_search" />
+    </RelativeLayout>
 
     <ListView
         android:id="@+id/homelist"
