--- a/res/layout/fragment_password_recover_step2.xml
+++ b/res/layout/fragment_password_recover_step2.xml
@@ -21,7 +21,7 @@
                         android:id="@+id/wallet_back"
                         android:layout_width="wrap_content"
                         android:layout_height="50dp"
-                        android:background="@color/orange"
+                        android:background="#ff0099cc"
                         android:src="@drawable/fanhui_02" />
 
                     <TextView
@@ -35,12 +35,12 @@
                         android:textSize="20sp" />
                 </RelativeLayout>
 
-        <fragment
+  <!--  <fragment
             android:id="@+id/input_verify"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             class="com.example.palmcampusmarket_client.fragment.inputcell.SimpleTextInputCellFragment3"
-            tools:layout="@layout/fragment_inputcell_simpletext3" />
+            tools:layout="@layout/fragment_inputcell_simpletext3" /> -->     
         
         <fragment
             android:id="@+id/input_password"
