--- a/res/layout/activity_table.xml
+++ b/res/layout/activity_table.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="5dp" >
 
+    <fragment
+        android:id="@+id/frag_lunbo"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        class="com.example.palmcampusmarket_client.fragment.LunboFragment"
+        tools:layout="@layout/lunbo" />
     <TableLayout
         android:id="@+id/table"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_marginTop="100dp" >
+        android:layout_height="90dp" >
 
         <!-- 第1行 -->
 
