--- a/res/layout/new_fragment_home_list2.xml
+++ b/res/layout/new_fragment_home_list2.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#eee"
@@ -81,11 +82,17 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical" >
 
+                <fragment
+                    android:id="@+id/frag_lunbo"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    class="com.example.palmcampusmarket_client.fragment.LunboFragment"
+                    tools:layout="@layout/lunbo" />
+
                 <TableLayout
                     android:id="@+id/table"
                     android:layout_width="match_parent"
-                    android:layout_height="90dp"
-                    android:layout_marginTop="100dp" >
+                    android:layout_height="90dp" >
 
                     <!-- 第1行 -->
 
