--- a/res/layout/activity_new.xml
+++ b/res/layout/activity_new.xml
@@ -1,59 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" >
 
-    <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="34dp"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/btn_need_new"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@drawable/btn_new_pressed"
-            android:gravity="center"
-            android:text="需求发布"
-            android:textColor="@color/btn_new_pressed_text_color"
-            android:textSize="55sp" />
+    <RelativeLayout
+        android:layout_width="200dp"
+        android:layout_height="46dp"
+        android:layout_gravity="bottom|center_horizontal" >
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@android:color/darker_gray" />
 
-        <TextView
-            android:id="@+id/btn_commodity_new"
+        <LinearLayout
+            android:id="@+id/linearLayout1"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@drawable/btn_new_pressed"
-            android:gravity="center"
-            android:text="商品上架"
-            android:textColor="@color/btn_new_pressed_text_color"
-            android:textSize="55sp" />
+            android:layout_height="44dp"
+            android:layout_marginTop="1dp"
+            android:orientation="horizontal" >
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@android:color/darker_gray" />
+
+            <TextView
+                android:id="@+id/btn_need_new"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/btn_new_pressed"
+                android:gravity="center"
+                android:text="需求发布"
+                android:textColor="@color/btn_new_pressed_text_color"
+                android:textSize="22sp" />
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@android:color/darker_gray" />
+
+            <TextView
+                android:id="@+id/btn_commodity_new"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/btn_new_pressed"
+                android:gravity="center"
+                android:text="商品上架"
+                android:textColor="@color/btn_new_pressed_text_color"
+                android:textSize="22sp" />
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@android:color/darker_gray" />
+        </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:layout_below="@+id/linearLayout1"
             android:background="@android:color/darker_gray" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/btn_back_new"
-        android:layout_width="match_parent"
-        android:layout_height="33dp"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/btn_new_pressed"
-        android:gravity="center"
-        android:text="X"
-        android:textColor="@color/btn_new_pressed_text_color"
-        android:textSize="25sp" />
+    </RelativeLayout>
 
 </RelativeLayout>
