--- a/res/layout/activity_palmcampus.xml
+++ b/res/layout/activity_palmcampus.xml
@@ -19,4 +19,20 @@
         android:layout_marginBottom="0dp" >
     </FrameLayout>
 
+    <FrameLayout
+        android:id="@+id/frame_new_outside"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#55ffffff" >
+
+        <fragment
+            android:id="@+id/frag_new"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_marginBottom="37dp"
+            class="com.example.palmcampusmarket_client.collect.NewFragment"
+            tools:layout="@layout/activity_new" />
+    </FrameLayout>
+
 </FrameLayout>
