--- a/res/layout/faragment_input_commodity_picture.xml
+++ b/res/layout/faragment_input_commodity_picture.xml
@@ -7,19 +7,35 @@
     android:orientation="vertical"
     android:padding="8dp" >
 
-    <TextView
-        android:id="@+id/label"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-       android:layout_marginLeft="4dp"
-        android:text="选取图片"
-        android:textColor="@android:color/black" />
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/label"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:text="请选择图片"
+            android:textColor="@android:color/black" />
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/addimage"
+            android:scaleType="fitXY"
+            android:src="@drawable/addimage" />
+    </LinearLayout>
 
     <FrameLayout
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_gravity="center"
-        android:background="#CCCCCC" >
+        android:layout_gravity="center" >
 
         <TextView
             android:id="@+id/hint"
@@ -27,13 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:clickable="false"
-            android:hint="请选择图片"
             android:textColor="@android:color/black" />
-
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
     </FrameLayout>
 
 </LinearLayout>
