--- a/res/layout/fragment_inputcell_simpletext2.xml
+++ b/res/layout/fragment_inputcell_simpletext2.xml
@@ -3,15 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="4dp"
-    android:layout_marginTop="4dp" 
-    android:background="@color/white">   
+    android:layout_marginTop="4dp"
+    android:orientation="horizontal"
+    android:background="@drawable/textview_select">"
   
+
     <EditText
         android:id="@+id/edit"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="请输入内容" 
-        android:background="@null"
-        android:drawableBottom="@drawable/line"/>
+        android:layout_height="40dp"
+        android:hint="请输入内容"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="5dp"
+        android:background="@null" />
+
 
 </LinearLayout>
