--- a/res/layout/fragment_input_type.xml
+++ b/res/layout/fragment_input_type.xml
@@ -24,8 +24,7 @@
             android:id="@+id/type"
             android:layout_width="match_parent"
             android:layout_height="47dp"
-            android:layout_marginTop="10dp"
-            android:entries="@array/commoditytype" />
+            android:layout_marginTop="10dp" />
     </LinearLayout>
 
 </LinearLayout>
