--- a/res/layout/fragment_page_addcommodity.xml
+++ b/res/layout/fragment_page_addcommodity.xml
@@ -55,13 +55,28 @@
                 class="com.example.palmcampusmarket_client.fragment.inputcell.CommoditySimpleTextInputCellFragment"
                 tools:layout="@layout/fragment_inputcell_simpletext" />
 
-          <fragment 
-              android:id="@+id/comm_type"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_marginTop="10dp"
-              class="com.example.palmcampusmarket_client.fragment.inputcell.CommodityTypeInputFragment"
-              tools:layout="@layout/fragment_input_type"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/label_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@android:color/white"
+                    android:gravity="center"
+                    android:text="请选择类型"
+                    android:textColor="@android:color/black" />
+
+                <Spinner
+                    android:id="@+id/type"
+                    android:layout_width="match_parent"
+                    android:layout_height="47dp"
+                    android:layout_marginTop="10dp" />
+            </LinearLayout>
 
             <fragment
                 android:id="@+id/comm_image"
@@ -70,7 +85,6 @@
                 android:layout_marginTop="10dp"
                 class="com.example.palmcampusmarket_client.fragment.inputcell.CommodityPictureInputCellFragment"
                 tools:layout="@layout/faragment_input_commodity_picture" />
-           
 
             <Button
                 android:id="@+id/btn_add"
