--- a/res/layout/activity_purchase.xml
+++ b/res/layout/activity_purchase.xml
@@ -21,7 +21,7 @@
                 android:layout_height="match_parent"
                 android:weightSum="10" >
 
-                <com.example.palmcampusmarket_client.fragment.ImageDown
+                <com.example.palmcampusmarket_client.fragment.ImageView
                     android:id="@+id/commodity_picture"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
