--- a/res/layout/fragment_purchase_order.xml
+++ b/res/layout/fragment_purchase_order.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="4">
-            <com.example.palmcampusmarket_client.fragment.ImageDown 
+            <com.example.palmcampusmarket_client.fragment.ImageView 
                 android:id="@+id/commodity_picture"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
