--- a/res/layout/type_bicycle.xml
+++ b/res/layout/type_bicycle.xml
@@ -33,6 +33,7 @@
         </FrameLayout>
 
         <Button
+            android:id="@+id/search_type_bicycle"
             android:layout_width="@dimen/btn_width"
             android:layout_height="@dimen/btn_height"
             android:layout_gravity="center_vertical"
